Added some changes around reponsiveness in smaller devices.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Bridging the Gap Between Connection and Communication</p>
     <div id="editableEditor" contenteditable></div>
 
-    <div class = "checkButtons" >
+    <div class = "checkButton" >
       <button id = "checkButton">Check</button>
       <button id = "copyButton">Copy</button>
       <button id = "clearButton">Clear</button>
