--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Bridging the Gap Between Connection and Communication</p>
     <div id="editableEditor" contenteditable></div>
 
-    <div class = "checkButton" >
+    <div class = "checkButtons" >
       <button id = "checkButton">Check</button>
       <button id = "copyButton">Copy</button>
       <button id = "clearButton">Clear</button>
@@ -21,6 +21,6 @@
       <p>Total Character: <span id = "Total-counter">0</span></p>
       <p>Remaining: <span id = "remaining-counter">150</span></p>
     </div>
-  
+    <script src="script.js"></script>
 </body>
 </html>
