--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       <button id = "clearButton">Clear</button>
     </div>
     <div class="word-counter">
-      <p>Total Character: <span id = "Total-counter">0</span></p>
+      <p>Total Character: <span id = "total-counter">0</span></p>
       <p>Remaining: <span id = "remaining-counter">150</span></p>
     </div>
+
     <script src="script.js"></script>
+
 </body>
 </html>
